# Flippity

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md
docs/: build.md
include/: app.h  clipboard.h  mainframe.h
scripts/: debug.sh  intellisense.sh
src/: app.cpp  clipboard.cpp  draw.cpp  events.cpp  flipsin.cpp  getflips.cpp  mainframe.cpp  secondinminute.cpp
